# ChatBot

./: .gitignore  LICENSE  README.md  chatbot.py  pyproject.toml  requirements-train.txt  requirements.txt  train_10b.py  train_tokenizer.py
.github/workflows/: ci.yml
configs/: chatbot-10b.yaml  chatbot-tiny.yaml
configs/models/: aurora-50b.yaml  aurora-72b.yaml  forge-250b.yaml  forge-460b.yaml  tiny.yaml
configs/runtime/: aurora-chat.yaml  default.yaml  forge-coder.yaml  forge-devops.yaml
configs/training/: audio_codec_pretrain.yaml  code_screenshot_pretrain.yaml  devops_sft.yaml  dpo.yaml  long_context.yaml  lora.yaml  omni_pretrain.yaml  omni_sft.yaml  pretrain.yaml  rlef.yaml  sft.yaml  tool-use-sft.yaml
data/: dataset_manifest.json
docs/: architecture-aurora-50b.md  architecture-aurora-72b.md  architecture-forge-250b.md  architecture-forge-460b.md  beginner-glossary.md  benchmarks.md  datasets.md  plugin-system.md  training-guide.md
legacy/v0-tiny-chatbot/: README.md  chat_llm.py  chatbot.py  train_llm.py
plugins_examples/: README.md
plugins_examples/code_review/: plugin.yaml  skill.md
plugins_examples/filesystem_mcp/: handlers.py  hooks.py  plugin.yaml  tools.py
plugins_examples/log_triage/: handlers.py  plugin.yaml  skill.md
scripts/: agent.py  audio_codec_pretrain.py  chat.py  count_params.py  download_datasets.py  dpo.py  estimate_params.py  eval.py  lora_finetune.py  omni_pretrain.py  pretrain.py  rlef.py  sft.py  train_tokenizer.py
src/chatbot/: __init__.py  chat.py  config.py  data.py  model.py  params.py  tokenizer.py  tokenizer_train.py  train.py  train_10b.py
src/chatbot/data/: __init__.py  audio_processing.py  code_render.py  dpo_loader.py  image_processing.py  packing.py  pretrain_loader.py  registry.py  sft_loader.py  (+4 more)
tests/: conftest.py  test_audio_codec.py  test_audio_encoder.py  test_cli.py  test_code_render.py  test_common_blocks.py  test_config.py  test_config_and_params.py  test_dataset_loaders.py  test_devops_tools.py  test_eval_runners.py  test_hook_registry.py  test_lora.py  test_model_generation.py  test_moe_routing.py  test_plugin_loader.py  test_rlef.py  test_runtime_agent.py  test_skill_loader.py  test_tokenizer.py  test_tokenizer_and_data.py  test_video_processing.py  test_vision_tower.py
tests/fixtures/: sample_pairs.jsonl
(+90 files in other folders)
